--- a/public/assets/styles/sass/style.scss
+++ b/public/assets/styles/sass/style.scss
@@ -3,5 +3,6 @@
 @use "components/header";
 @use "components/catcss"; 
 @use "components/footer";
+@use "components/modal";
 @use "pages/homepage";
 @use "pages/login.scss";
