--- a/views/templates/homepage.html.twig
+++ b/views/templates/homepage.html.twig
@@ -20,7 +20,7 @@
     {% endblock %}
        <section id="homepage" class="homepage-content">
         <header class="homepage-header">
-            <h1>Page Accueil</h1>
+            <h1 class="sr-only">Page Accueil</h1>
             <p class="subtitle">Bonjour et Bienvenue sur le site Apprendre avec Miaou !</p>
             <p class="description">Le site de jeux et activités pour les enfants de 3/5 ans</p>
         </header>
