Front register à reprendre

--- a/public/assets/styles/sass/style.scss
+++ b/public/assets/styles/sass/style.scss
@@ -5,4 +5,5 @@
 @use "components/footer";
 @use "components/modal";
 @use "pages/homepage";
-@use "pages/login.scss";
+@use "pages/login";
+@use "pages/register";
